--- a/user-front/src/sass/site.scss
+++ b/user-front/src/sass/site.scss
@@ -5,18 +5,24 @@
 // @import 'profile';
 
 // You can use any sass features, like variables, for instance:
-$font-stack: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
+$font-stack: sans-serif;
 $base-font-size: 1.125em;
 
 .body-container {
   font-family: $font-stack;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   padding-top: 72px;
   -webkit-font-smoothing: antialiased;
   font-size: $base-font-size;
   color: #333;
   line-height: 1.5em;
+}
+
+a.navbar-item {
+  margin-left: 0.25em;
+  margin-right: 0.25em;
+  color: #333;
 }
 
 h1, h2, h3 {
